data/derived/comb/progs/unify/prog1345.ml.out
Characters 416-417:
  else 0;;
       ^
Error: This expression has type int but an expression was expected of type
         float
